# NEST-models

./: .gitignore  Makefile.am  glif_psc_alpha_multi.cpp  glif_psc_alpha_multi.h  iaf_freq_sensor.cpp  iaf_freq_sensor.h  iaf_freq_sensor_v2.cpp  iaf_freq_sensor_v2.h  iaf_psc_alpha_ext.cpp  iaf_psc_alpha_ext.h  iaf_psc_alpha_multi_ext.cpp  iaf_psc_alpha_multi_ext.h  iaf_wsn_alpha.cpp  iaf_wsn_alpha.h  iaf_wsn_hermitian_1.cpp  iaf_wsn_hermitian_1.h  iaf_wsn_hermitian_2.cpp  iaf_wsn_hermitian_2.h  mymake  mymodule.cpp  mymodule.h  stdp_connection_alpha.cpp  stdp_connection_alpha.h  stdp_connection_ext.cpp  stdp_connection_ext.h  stdp_connection_multi.cpp  stdp_connection_multi.h
